# SHinsunMusic

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
src/: main.rs  server.rs  state.rs
src/adapters/primary/: mod.rs
src/adapters/primary/accounts/: handler.rs
src/adapters/primary/audio/: handler.rs
src/adapters/primary/audios/: handler.rs
src/adapters/primary/auth/: handler.rs
src/adapters/shared/: database.rs  di.rs  mod.rs
src/adapters/shared/firebase/: claims.rs  (+3 more)
src/application/: mod.rs
src/application/apis/: audio_api.rs  auth_api.rs  mod.rs
src/application/domain/: account_domain.rs  audio_domain.rs  auth_domain.rs  mod.rs
src/application/entities/: account_entity.rs  audio_entity.rs  base_entity.rs  mod.rs
src/application/repositories/: account_repository.rs  audio_repository.rs  mod.rs
src/application/services/: account_service.rs  audio_service.rs  auth_service.rs  mod.rs
src/application/usecases/: account_usecases.rs  audio_usecases.rs  auth_usecases.rs  mod.rs
src/core/: mod.rs
src/core/base/: base_query.rs  mod.rs
src/core/configs/: app_config.rs  database_config.rs  jwt_config.rs  key_config.rs  mod.rs  network_config.rs  server_config.rs
src/core/cryptography/: keypair.rs  mod.rs
src/core/helpers/: merge_interlaced.rs  mod.rs  password_generate.rs  string_helper.rs  validate_helper.rs
src/core/http/: failure.rs  response.rs
src/core/jwt/: claims.rs  interface.rs  mod.rs  service.rs  types.rs
src/core/middlewares/: auth_middleware.rs  mod.rs  validator.rs  validator_middleware.rs
(+20 files in other folders)
