[package]
name = "SHinsunMusic"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
